--- a/themes/replica-next/source/css/navbar.styl
+++ b/themes/replica-next/source/css/navbar.styl
@@ -5,7 +5,7 @@
   padding-top: 12px
   padding-bottom: 12px
   color: rgba(255, 255, 255, 0.75)
-  background-color: #24292e
+  background-color: #1f3d80
   &-logo
     color: $white !important
     font-size: 37.32px
