--- a/themes/replica-next/layout/_partial/navbar-secondary.ejs
+++ b/themes/replica-next/layout/_partial/navbar-secondary.ejs
@@ -15,6 +15,6 @@ var isOverview = ['tags', 'archives', 'categories'].indexOf(nav_selected) === -1
       <a href="<%= url_for(theme.tag_dir) %>">Tags <span class="counter"><%= site.tags.length %></span></a></li>
 
       <li class="<%= nav_selected === 'about' ? 'selected' : '' %>">
-            <a href="">About <span class="counter">me</span></a></li>
+            <a href="<%= url_for(theme.about_dir) %>">About <span class="counter">me</span></a></li>
   </ul>
 </nav>
