--- a/themes/replica-next/layout/page.ejs
+++ b/themes/replica-next/layout/page.ejs
@@ -1,3 +1,5 @@
+<% if(page.title === 'categories' || page.title === 'tags'){ %>
+
 <div class="container-lg">
   <%- partial('_partial/intro') %>
 
@@ -13,11 +15,36 @@
       <%- list_categories() %>
       <% } %>
 
-      <% if(page.title !== 'categories' && page.title !== 'tags'){ %>
-        <article class="post-content">
-          <%- page.content %>
-        </article>
-      <% } %>
     </div>
   </div>
 </div>
+
+
+<% } else { %>
+
+<%
+var publishTimestamp = page.date.valueOf();
+%>
+<div class="post-container container">
+  <h3>
+    <i class="fa fa-user-o"></i>
+    <%= config.author || '' %>
+
+    <span class="post-date float-right" title="{{moment(<%= publishTimestamp %>).format('MMM DD, YYYY, h:mm:ss A')}}">
+      <i class="fa fa-pencil-square-o"></i>
+      {{moment(<%= publishTimestamp %>).fromNow()}}
+    </span>
+  </h3>
+
+  <article class="post-content">
+    <%- page.content %>
+  </article>
+</div>
+
+<% if (config.gitalk ) { %>
+    <%- partial('_widget/gitalk') %>
+<% }else{ %>
+    <%- partial('_widget/disqus') %>
+<% } %>
+
+<% } %>
