Changed: 更新 blog

--- a/themes/replica-next/source/css/_variables.styl
+++ b/themes/replica-next/source/css/_variables.styl
@@ -2,7 +2,7 @@
 $white = #FFF
 $black = #000
 $grey-dark = #24292e
-$grey-lighter = #f6f8fa
+$grey-lighter = #222222
 $grey-light = #f4f4f4
 $grey-border = #dcddde
 $blue-bright = #0366d6
