--- a/themes/replica-next/source/css/base.styl
+++ b/themes/replica-next/source/css/base.styl
@@ -6,7 +6,7 @@ body
   padding: 0
   font-size: 14px
   line-height: 1.5
-  color: $grey-lighter
+  color: #222222
   font-family: $font-family-main
   min-width: 1020px
   word-wrap: break-word;
