--- a/themes/noise/layout/base.pug
+++ b/themes/noise/layout/base.pug
@@ -71,3 +71,13 @@ html
         e.src='//www.google-analytics.com/analytics.js';
         r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
         ga('create','#{theme.google_analytics}');ga('send','pageview');
+
+    if theme.baidu
+      script.
+        var _hmt = _hmt || [];
+        (function() {
+          var hm = document.createElement("script");
+          hm.src = "https://hm.baidu.com/hm.js?66bdd0a984d281716c78a567d1f39e67";
+          var s = document.getElementsByTagName("script")[0]; 
+          s.parentNode.insertBefore(hm, s);
+        })();
